src/test/ui/closures/issue-10398.rs
#![feature(box_syntax)]

fn main() {
    let x: Box<_> = box 1;
    let f = move|| {
        let _a = x;
        drop(x);
        //~^ ERROR: use of moved value: `x`
    };
    f();
}
